--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontEndBookface</title>
+  <title>Front End BookFace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/themify-icons.css">
+  <link rel="stylesheet" href="assets/css/feather.css">
+  <link rel="stylesheet" href="assets/css/emoji.css">
+  <link rel="stylesheet" href="assets/css/lightbox.css">
+  <!--  owl carousel-->
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.theme.default.css">
+  <link rel="stylesheet" href="assets/css/aos.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap-datetimepicker.css">
+
+
 </head>
 <body>
   <app-root></app-root>
+
+  ----------JS-----------
+  <script src="assets/js/aos.min.js"></script>
+  <script src="assets/js/apexcharts.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/chart.js"></script>
+  <script src="assets/js/countdown.js"></script>
+  <script src="assets/js/jquery.easypiechart.min.js"></script>
+  <script src="assets/js/lightbox.js"></script>
+  <script src="assets/js/plugin.js"></script>
+  <script src="assets/js/scripts.js"></script>
+  <script src="assets/js/video-player.js"></script>
+  <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 </body>
 </html>
