--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/themify-icons.css">
+  <link rel="stylesheet" href="assets/css/feather.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <app-root></app-root>
+  <script src="assets/js/plugin.js"></script>
+  <script src="assets/js/scripts.js"></script>
+  <script src="assets/js/lightbox.js"></script>
+
 </body>
 </html>
